@@ -46,151 +46,151 @@ var tests = testCase({
     }      
   },
   
-  // // Gridstore tests
-  // shouldCorrectlyExecuteGridStoreExistsByObjectId : function(test) {
-  //   var gridStore = new GridStore(client, null, "w");
-  //   gridStore.open(function(err, gridStore) {
-  //     gridStore.write("hello world!", function(err, gridStore) {
-  //       gridStore.close(function(err, result) {          
-  //         GridStore.exist(client, result._id, function(err, result) {
-  //           test.equal(true, result);
-  //         })
-  // 
-  //         GridStore.exist(client, new client.bson_serializer.ObjectID(), function(err, result) {
-  //           test.equal(false, result);
-  //         });
-  //           
-  //         GridStore.exist(client, new client.bson_serializer.ObjectID(), 'another_root', function(err, result) {
-  //           test.equal(false, result);
-  //           test.done();
-  //         });
-  //       });
-  //     });
-  //   });
-  // },
-  // 
-  // shouldCorrectlySafeFileAndReadFileByObjectId : function(test) {
-  //   var gridStore = new GridStore(client, null, "w");
-  //   gridStore.open(function(err, gridStore) {
-  //     gridStore.write("hello world!", function(err, gridStore) {
-  //       gridStore.close(function(err, result) {          
-  //         
-  //         // Let's read the file using object Id
-  //         GridStore.read(client, result._id, function(err, data) {
-  //           test.equal('hello world!', data);
-  //           test.done();
-  //         });          
-  //       });
-  //     });
-  //   });    
-  // },
-  // 
-  // shouldCorrectlyExecuteGridStoreExists : function(test) {
-  //   var gridStore = new GridStore(client, "foobar", "w");
-  //   gridStore.open(function(err, gridStore) {
-  //     gridStore.write("hello world!", function(err, gridStore) {
-  //       gridStore.close(function(err, result) {          
-  //         GridStore.exist(client, 'foobar', function(err, result) {
-  //           test.equal(true, result);
-  //         });
-  // 
-  //         GridStore.exist(client, 'does_not_exist', function(err, result) {
-  //           test.equal(false, result);
-  //         });
-  // 
-  //         GridStore.exist(client, 'foobar', 'another_root', function(err, result) {
-  //           test.equal(false, result);
-  //           test.done();
-  //         });
-  //       });
-  //     });
-  //   });
-  // },
-  // 
-  // shouldCorrectlyExecuteGridStoreList : function(test) {
-  //   var gridStore = new GridStore(client, "foobar2", "w");
-  //   gridStore.open(function(err, gridStore) {
-  //     gridStore.write("hello world!", function(err, gridStore) {
-  //       gridStore.close(function(err, result) {
-  //         GridStore.list(client, function(err, items) {
-  //           var found = false;
-  //           items.forEach(function(filename) {
-  //             if(filename == 'foobar2') found = true;
-  //           });
-  // 
-  //           test.ok(items.length >= 1);
-  //           test.ok(found);
-  //         });
-  //         
-  //         GridStore.list(client, {id:true}, function(err, items) {
-  //           var found = false;
-  //           items.forEach(function(id) {
-  //             test.ok(typeof id == 'object');
-  //           });
-  // 
-  //           test.ok(items.length >= 1);
-  //         });          
-  // 
-  //         GridStore.list(client, 'fs', function(err, items) {
-  //           var found = false;
-  //           items.forEach(function(filename) {
-  //             if(filename == 'foobar2') found = true;
-  //           });
-  // 
-  //           test.ok(items.length >= 1);
-  //           test.ok(found);
-  //         });
-  // 
-  //         GridStore.list(client, 'my_fs', function(err, items) {
-  //           var found = false;
-  //           items.forEach(function(filename) {
-  //             if(filename == 'foobar2') found = true;
-  //           });
-  // 
-  //           test.ok(items.length >= 0);
-  //           test.ok(!found);
-  // 
-  //           var gridStore2 = new GridStore(client, "foobar3", "w");
-  //           gridStore2.open(function(err, gridStore) {
-  //             gridStore2.write('my file', function(err, gridStore) {
-  //               gridStore.close(function(err, result) {
-  //                 GridStore.list(client, function(err, items) {
-  //                   var found = false;
-  //                   var found2 = false;
-  //                   items.forEach(function(filename) {
-  //                     if(filename == 'foobar2') found = true;
-  //                     if(filename == 'foobar3') found2 = true;
-  //                   });
-  // 
-  //                   test.ok(items.length >= 2);
-  //                   test.ok(found);
-  //                   test.ok(found2);
-  //                   
-  //                   test.done();
-  //                 });
-  //               });
-  //             });
-  //           });
-  //         });
-  //       });
-  //     });
-  //   });
-  // },
-  // 
-  // shouldCorrectlyPeformGridStoreReadLength : function(test) {
-  //   var gridStore = new GridStore(client, "test_gs_read_length", "w");
-  //   gridStore.open(function(err, gridStore) {
-  //     gridStore.write("hello world!", function(err, gridStore) {
-  //       gridStore.close(function(err, result) {
-  //         // Assert that we have overwriten the data
-  //         GridStore.read(client, 'test_gs_read_length', 5, function(err, data) {
-  //           test.equal('hello', data);
-  //           test.done();
-  //         });
-  //       });
-  //     });
-  //   });
-  // },
+  // Gridstore tests
+  shouldCorrectlyExecuteGridStoreExistsByObjectId : function(test) {
+    var gridStore = new GridStore(client, null, "w");
+    gridStore.open(function(err, gridStore) {
+      gridStore.write("hello world!", function(err, gridStore) {
+        gridStore.close(function(err, result) {          
+          GridStore.exist(client, result._id, function(err, result) {
+            test.equal(true, result);
+          })
+  
+          GridStore.exist(client, new client.bson_serializer.ObjectID(), function(err, result) {
+            test.equal(false, result);
+          });
+            
+          GridStore.exist(client, new client.bson_serializer.ObjectID(), 'another_root', function(err, result) {
+            test.equal(false, result);
+            test.done();
+          });
+        });
+      });
+    });
+  },
+  
+  shouldCorrectlySafeFileAndReadFileByObjectId : function(test) {
+    var gridStore = new GridStore(client, null, "w");
+    gridStore.open(function(err, gridStore) {
+      gridStore.write("hello world!", function(err, gridStore) {
+        gridStore.close(function(err, result) {          
+          
+          // Let's read the file using object Id
+          GridStore.read(client, result._id, function(err, data) {
+            test.equal('hello world!', data);
+            test.done();
+          });          
+        });
+      });
+    });    
+  },
+  
+  shouldCorrectlyExecuteGridStoreExists : function(test) {
+    var gridStore = new GridStore(client, "foobar", "w");
+    gridStore.open(function(err, gridStore) {
+      gridStore.write("hello world!", function(err, gridStore) {
+        gridStore.close(function(err, result) {          
+          GridStore.exist(client, 'foobar', function(err, result) {
+            test.equal(true, result);
+          });
+  
+          GridStore.exist(client, 'does_not_exist', function(err, result) {
+            test.equal(false, result);
+          });
+  
+          GridStore.exist(client, 'foobar', 'another_root', function(err, result) {
+            test.equal(false, result);
+            test.done();
+          });
+        });
+      });
+    });
+  },
+  
+  shouldCorrectlyExecuteGridStoreList : function(test) {
+    var gridStore = new GridStore(client, "foobar2", "w");
+    gridStore.open(function(err, gridStore) {
+      gridStore.write("hello world!", function(err, gridStore) {
+        gridStore.close(function(err, result) {
+          GridStore.list(client, function(err, items) {
+            var found = false;
+            items.forEach(function(filename) {
+              if(filename == 'foobar2') found = true;
+            });
+  
+            test.ok(items.length >= 1);
+            test.ok(found);
+          });
+          
+          GridStore.list(client, {id:true}, function(err, items) {
+            var found = false;
+            items.forEach(function(id) {
+              test.ok(typeof id == 'object');
+            });
+  
+            test.ok(items.length >= 1);
+          });          
+  
+          GridStore.list(client, 'fs', function(err, items) {
+            var found = false;
+            items.forEach(function(filename) {
+              if(filename == 'foobar2') found = true;
+            });
+  
+            test.ok(items.length >= 1);
+            test.ok(found);
+          });
+  
+          GridStore.list(client, 'my_fs', function(err, items) {
+            var found = false;
+            items.forEach(function(filename) {
+              if(filename == 'foobar2') found = true;
+            });
+  
+            test.ok(items.length >= 0);
+            test.ok(!found);
+  
+            var gridStore2 = new GridStore(client, "foobar3", "w");
+            gridStore2.open(function(err, gridStore) {
+              gridStore2.write('my file', function(err, gridStore) {
+                gridStore.close(function(err, result) {
+                  GridStore.list(client, function(err, items) {
+                    var found = false;
+                    var found2 = false;
+                    items.forEach(function(filename) {
+                      if(filename == 'foobar2') found = true;
+                      if(filename == 'foobar3') found2 = true;
+                    });
+  
+                    test.ok(items.length >= 2);
+                    test.ok(found);
+                    test.ok(found2);
+                    
+                    test.done();
+                  });
+                });
+              });
+            });
+          });
+        });
+      });
+    });
+  },
+  
+  shouldCorrectlyPeformGridStoreReadLength : function(test) {
+    var gridStore = new GridStore(client, "test_gs_read_length", "w");
+    gridStore.open(function(err, gridStore) {
+      gridStore.write("hello world!", function(err, gridStore) {
+        gridStore.close(function(err, result) {
+          // Assert that we have overwriten the data
+          GridStore.read(client, 'test_gs_read_length', 5, function(err, data) {
+            test.equal('hello', data);
+            test.done();
+          });
+        });
+      });
+    });
+  },
   
   shouldCorrectlyReadFromFileWithOffset : function(test) {
     var gridStore = new GridStore(client, "test_gs_read_with_offset", "w");
